# genai-lab

./: .env.example  .gitignore  .mise.toml  Dockerfile  README.md  Taskfile.yml  dagster.yaml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  workspace.yaml
basic_langchain/: __main__.py  basic_langchain.py
basic_qa_rag/: __main__.py  basic_qa_rag.py
basic_rag/: __main__.py  basic_rag.py
common/: chat_interface.py  pull_model.py  schemas.py  settings.py
common/chat_building_blocks/: io_lines.py
common/chat_interfaces/: base.py  langchain.py  sdk.py
image_gen/: __main__.py  image_gen.py
json_mode/: __main__.py  json_mode.py
llm_lab/: __main__.py  schemas.py  settings.py
llm_lab/internal/: similarity.py
multi_query/: __main__.py  multi_query.py
notebooks/: scratch.ipynb
pipeline/: definitions.py  jobs.py  resources.py  sensors.py
pipeline/assets/basic_qa_rag/: assets.py  basic_qa_rag.py
pipeline/assets/obsidian_qa_rag/: obsidian_qa_rag.py
pipeline/assets/pdf_rag/: partitions.py  pdf_rag.py
rag_fusion/: __main__.py  rag_fusion.py
semantic_rag/: __main__.py  semantic_rag.py
tool_call/: __main__.py  tool_call.py
vanilla/: __main__.py  vanilla.py
