[tool.poetry]
name = "genai-lab"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
ollama = "^0.3.3"
loguru = "^0.7.2"
tqdm = "^4.66.6"
colorama = "^0.4.6"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sentence-transformers = "^3.2.1"
openai = "^1.53.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.6"
langchain-openai = "^0.2.4"
langchain-ollama = "^0.2.0"
langchain-anthropic = "^0.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
ipython = "^8.28.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
